--- a/WebErp/Web.config
+++ b/WebErp/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ConnAzureGoodeasy" connectionString="Data Source=.\sqlexpress;Database=GASystem;User ID=sa;Password=***;" providerName="System.Data.SqlClient" />
+    <add name="ConnAzureGoodeasy" connectionString="Data Source=.\sqlexpress;Database=GASystem;User ID=sa;Password=Love0521;" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
