--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\DCNP005\packages.config" />
   <repository path="..\WebErp\packages.config" />
+  <repository path="..\WebERPLibrary\packages.config" />
 </repositories>
