--- a/WebERPLibrary/packages.config
+++ b/WebERPLibrary/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EPPlus" version="4.1.1" targetFramework="net46" />
+  <package id="ExcelDataReader" version="3.3.0" targetFramework="net46" />
+  <package id="ExcelDataReader.DataSet" version="3.3.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
 </packages>
