--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ DCNP005/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 *.cache
 *.cache
 .vs/WebErp/v15/sqlite3/storage.ide
+Dinp02301/obj/*
