--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DCNP005\packages.config" />
+  <repository path="..\Dinp02301\packages.config" />
   <repository path="..\WebErp\packages.config" />
   <repository path="..\WebERPLibrary\packages.config" />
 </repositories>
