--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ WebErp/App_Data/PublishProfiles/*
 WebErp/website.publishproj
 WebERPLibrary/bin/Release/*
 WebERPLibrary/obj/Release/*
+WebErp.sln.DotSettings.user
