--- a/Dinp02301/packages.config
+++ b/Dinp02301/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.13" targetFramework="net46" />
   <package id="NPOI" version="2.3.0" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 </packages>
