--- a/Dinp02301/Dinp02301.csproj
+++ b/Dinp02301/Dinp02301.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Gaf04.cs" />
     <Compile Include="Inf29.cs" />
     <Compile Include="Inf29a.cs" />
+    <Compile Include="Print\PrintHelper.cs" />
+    <Compile Include="Print\PrintRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Taf10.cs" />
   </ItemGroup>
