--- a/WebERPLibrary/packages.config
+++ b/WebERPLibrary/packages.config
@@ -4,4 +4,5 @@
   <package id="ExcelDataReader" version="3.3.0" targetFramework="net46" />
   <package id="ExcelDataReader.DataSet" version="3.3.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 </packages>
