add class for initial saf 20

--- a/WebErp/Web.Debug.config
+++ b/WebErp/Web.Debug.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ConnAzureGoodeasy" connectionString="Data Source=;Database=goodeasy;User ID=;Password=;" providerName="System.Data.SqlClient" />
+    <add name="goodeasyConnectionString" connectionString="Data Source=thorlinsite.com;Database=god;User ID=sa;Password=1982Thor;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
