--- a/Dinp02101/Dinp02101.csproj
+++ b/Dinp02101/Dinp02101.csproj
@@ -40,8 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Inf03.cs" />
+    <Compile Include="Inf20.cs" />
+    <Compile Include="Inf20a.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
