--- a/Dinp02401/Dinp02401.csproj
+++ b/Dinp02401/Dinp02401.csproj
@@ -66,11 +66,11 @@
     <Compile Include="Cnf10.cs" />
     <Compile Include="Cnf14.cs" />
     <Compile Include="Gaf04.cs" />
-    <Compile Include="saf20.cs" />
+    <Compile Include="Saf20.cs" />
     <Compile Include="Print\PrintHelper.cs" />
     <Compile Include="Print\PrintRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="saf20a.cs" />
+    <Compile Include="Saf20a.cs" />
     <Compile Include="saf37.cs" />
     <Compile Include="saf37a.cs" />
     <Compile Include="saf37b.cs" />
