1, fix dinp02401Search 2. fix Saf20Handle  Search

--- a/Dinp02401/Dinp02401.csproj
+++ b/Dinp02401/Dinp02401.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Cnf07.cs" />
     <Compile Include="Cnf10.cs" />
     <Compile Include="Cnf14.cs" />
+    <Compile Include="ExtensionDataTable.cs" />
     <Compile Include="Gaf04.cs" />
     <Compile Include="Saf20.cs" />
     <Compile Include="Print\PrintHelper.cs" />
