--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ WebErp/Bin/WebERPLibrary.dll
 *.FileListAbsolute.txt
 *.lastcodeanalysissucceeded
 *.csproj.user
+WebErp/Dcnp/Import_template_Dcnp00501_20171230_完成_FINAL.xlsx
+WebErp/vwd.webinfo
